[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="Flow4z"
version="2024.0.0"
authors = [
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
maintainers = [
    { name="Laura Cabayol-Garcia", email="lcabayol@pic.es" },
]
description = "Normalizing flow to predict photometry and photo-z from astronomical images"
readme = "README.md"
keywords = [
    "Cosmology", "Generative AI", "Photometry", "redshift"
]
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "configobj",
    "torch",
    "jupyterlab",
    "jupytext",
    "argparse",
    "tqdm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific :: Cosmology/Astrophysics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["Flow4z","Flow4z.*"]
namespaces = false


[project.urls]
Homepage="https://github.com/lauracabayol/Flow4z"
Repository="https://github.com/lauracabayol/Flow4z.git"
Issues="https://github.com/lauracabayol/Flow4z/issues"